# krs

./: .gitignore
.github/workflows/: linux.yml
krs_gensheet/: Cargo.toml
krs_gensheet/src/: main.rs
krs_gensheet/src/krs_base/: set.rs
krs_gensheet/src/krs_inputloader/: extract.rs  mod.rs
